--- a/DocTranslate.WebAPI/DocTranslate.WebAPI.csproj
+++ b/DocTranslate.WebAPI/DocTranslate.WebAPI.csproj
@@ -43,6 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="itextsharp, Version=5.5.13.1, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13.1\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Office.Interop.Word.15.0.4797.1003\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
@@ -100,6 +103,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\IReadable.cs" />
+    <Compile Include="Helpers\PdfDocumentManager.cs" />
     <Compile Include="Helpers\WordDocumentManager.cs" />
     <Compile Include="Models\FileResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
