--- a/DocTranslate.WebAPI/packages.config
+++ b/DocTranslate.WebAPI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
